instructions.Instructions.scala.error
Compilation error:
Instructions:15: error: identifier expected but '}' found.
	}
        ^