instructions.Instructions.scala.code
baisseBrosse()
avance() 
avance()
droite()
droite()
recule()
recule()
recule()
gauche()
gauche()
leveBrosse()
e.g.
